# ubuntu-auto-update

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_IMPROVEMENTS.md  CHANGELOG.md  CONTAINERIZATION_SUMMARY.md  DEVELOPMENT.md  Dockerfile  Dockerfile.host-update  LICENSE  PROJECT_STRUCTURE.md  README.md  RESEARCH_PLAN.md  WARP.md  config.conf  config.default.conf  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  install.sh  package-lock.json  quickstart.sh  requirements.txt  test-container.sh  test-report.md  uninstall.sh  update-host.sh  update.sh  update.sh.tpl
.air/: mcp.json
.github/workflows/: ci.yml  docker-image.yml  release.yml
agent/: Cargo.toml  Dockerfile  README.md  auth.token  install.sh
agent/apparmor/: ubuntu-auto-update-agent
agent/docker/: agent.toml  entrypoint.sh
agent/src/: config.rs  enrollment.rs  http_client.rs  logging.rs  main.rs  metrics.rs  updater.rs
agent/systemd/: ubuntu-auto-update-agent.service  ubuntu-auto-update-agent.timer
backend/: .air.toml  .dockerignore  .golangci.yml  Dockerfile  Dockerfile.dev  README.md  config.conf  coverage.out  encryption.key  go.mod  go.sum  startup.sh
backend/db/: queries.sql
dashboard/: Dockerfile  app.py  dashboard.db  requirements.txt
docs/: CHANGELOG.md  TROUBLESHOOTING.md
mobile/: App.tsx  package-lock.json
observability/: alerts.yaml  prometheus.yml
scripts/: build.sh  e2e-target.Dockerfile  e2e.sh  test.sh
systemd/: ubuntu-auto-update-dashboard.service  ubuntu-auto-update.service  ubuntu-auto-update.timer
web/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+173 files in other folders)
