[package]
name = "ua-agent"
version = "0.2.0"
edition = "2021"
authors = ["Ubuntu Auto-Update Team"]
description = "Memory-safe Ubuntu update agent with enterprise security"
license = "MIT"
repository = "https://github.com/patel5d2/ubuntu-auto-update"

[dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
gethostname = "0.4.3"
config = "0.14"
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
prometheus = { version = "0.13", features = ["process"] }
sqlite = "0.32"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
sysinfo = "0.29"
regex = "1.0"
toml = "0.8"
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.11"
tokio-test = "0.4"
serial_test = "3.0"

[features]
default = ["secure-communication"]
secure-communication = []
sanitizer = []
fuzzing = []

# Security and performance optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
